# Crescendo

./: .gitignore  LICENSE  README.md  SAFETY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default_policy.json
data/: benign_controls.json  crescendo_attack_vectors.json
docs/: threat_model.md
reports/: technical_report.md
results/: benchmark_results.json  benchmark_summary.md  strategy_metrics.csv
src/crescendo_guard/: __init__.py  benchmark.py  cli.py  detectors.py  mitigations.py  model_clients.py  pipeline.py  policy.py  reporting.py  types.py
tests/: test_benchmark.py  test_detector.py  test_pipeline.py
