[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crescendo-guard"
version = "0.1.0"
description = "A reproducible defense pipeline and benchmark for Crescendo style multi turn LLM jailbreaks around Llama-3.2-3B-Instruct."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rajat Rawal" }]
keywords = ["llm-safety", "jailbreak-defense", "crescendo", "llama", "benchmark"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
llama = [
  "accelerate>=0.30",
  "torch>=2.2",
  "transformers>=4.45",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
crescendo-guard = "crescendo_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
